--- a/requirements.txt
+++ b/requirements.txt
@@ -12,5 +12,5 @@ gunicorn==20.1.0
 flask-restx==0.5.1
 python-dotenv==0.19.2
 Flask-Minify==0.37
-WTForms-Alchemy==0.18.0 mfg hnmm,m vvbnm,
+WTForms-Alchemy==0.18.0
 PyJWT~=2.4.0
